# ProyectUni

./: CMakeLists.txt  LICENSE  README.md  RETO_DAW.md  main.cpp
StyloSimplee/: CMakeLists.txt  ProyectoProgra_Doc.md
StyloSimplee/src/: Sequencer.cpp  Sequencer.h  StylophoneSynth.cpp  StylophoneSynth.h  main.cpp
StylophoneEmulator/: imgui.ini
StylophoneEmulator/src/: Sequencer.h  main.cpp
src/: main.cpp
